# moderatsiya-kartochek

./: Dockerfile  Dockerfile-train  README.md  make_submission.py  pyproject.toml
moderatsiya_kartochek/: main.py  model_processing.py
moderatsiya_kartochek/models/: blip_image_classifier.xml
notebooks/: export.ipynb  probe-blip-large.ipynb
